# train_control

./: CMakeLists.txt  README.md  package.xml  readme.md
HW01/: control.cpp  first_control.py
HW02/: my_thruster_mapper.py  thrust_mapper.py  thruster_mapper.py  thruster_mapper_mew.py
msg/: ForcePlane.msg  ForceThruster.msg  SingleState.msg
problem/: plan_1_dimension.cpp
